feat: implement request dto validators
